# mnemion

./: .coverage  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RESEARCH.md  SYSTEM_PROMPT.md  failed_logs.txt  jobs.json  pyproject.toml
.claude-plugin/: .mcp.json  README.md  marketplace.json  plugin.json
.codex-plugin/: README.md  hooks.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.molthub/: project.md
benchmarks/: BENCHMARKS.md  HYBRID_MODE.md  README.md  convomem_bench.py  head_to_head.py  latent_health.py  locomo_bench.py  longmemeval_bench.py  moat_benchmark.py  verify_storage.py
docs/: BENCHMARK_INTEGRITY.md  MCP_TOOLS.md  REPAIR.md  SOURCES.md  moat.md
eval/: benchmark.py
examples/: HOOKS_TUTORIAL.md  basic_mining.py  convo_import.py  gemini_cli_setup.md  mcp_setup.md
hooks/: README.md  mempal_save_hook.py  mnemion_precompact_hook.sh  mnemion_save_hook.py  mnemion_save_hook.sh
mempalace/: README.md  cli.py  config.py  contradiction_detector.py  drawer_trust.py  entity_detector.py  hybrid_searcher.py  llm_backend.py  mcp_server.py  miner.py  searcher.py  version.py
mnemion/: README.md  __init__.py  __main__.py  anaktoron_graph.py  chroma_compat.py  cli.py  cognitive_graph.py  config.py  contradiction_detector.py  convo_miner.py  corpus_origin.py  dialect.py  drawer_trust.py  embedding.py  entity_detector.py  entity_patterns.py  entity_registry.py  general_extractor.py  hooks_cli.py  hybrid_searcher.py  instructions_cli.py  knowledge_graph.py  layers.py  lewm.py  librarian.py  llm_backend.py  mcp_server.py  memory_guard.py  miner.py  moat_eval.py  normalize.py  onboarding.py  palace_graph.py  predictor.py  project_scanner.py  query_sanitizer.py  reconstruction.py  repair.py  room_detector_local.py  searcher.py  (+5 more)
scripts/: setup_librarian_scheduler.ps1
studio/: README.md  start.bat
sync/: README.md  SyncMemories.ps1  SyncMemories.sh  backfill_trust.py  install_windows.ps1  merge_exports.py  run_vllm.sh
tests/: __init__.py  conftest.py  test_backends.py  test_chroma_compat.py  test_cli_init.py  test_cli_install_smoke.py  test_cli_onboarding.py  test_cognitive_graph.py  test_config.py  test_connectors.py  test_convo_miner.py  test_corpus_origin_project_scanner.py  test_dialect.py  test_embedding.py  test_entity_patterns.py  test_hnsw_safety.py  test_hooks_cli.py  test_miner.py  (+19 more)
(+78 files in other folders)
